BI: material failed to update in Texture shading mode #44077

Closed
opened 2015-03-21 15:41:43 +01:00 by Leon Cheung · 17 comments
Member

System Information
win8 64bit | GTX680

Blender Version
Broken: 2.74.1 (997c0c8)

Short description of error
When setting vireport shading mode to Texure, material fails to update (until having to click on something in Mesh Data tab)

Exact steps for others to reproduce the error
bi.jpg

**System Information** win8 64bit | GTX680 **Blender Version** Broken: 2.74.1 (997c0c8) **Short description of error** When setting vireport shading mode to Texure, material fails to update (until having to click on something in Mesh Data tab) **Exact steps for others to reproduce the error** ![bi.jpg](https://archive.blender.org/developer/F153737/bi.jpg)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Member

Added subscribers: @Psy-Fi, @JulianEisel

Added subscribers: @Psy-Fi, @JulianEisel
Member

@Psy-Fi, Caused by 2b7e1c6011, so mind having a look?

@Psy-Fi, Caused by 2b7e1c6011, so mind having a look?
Antonis Ryakiotakis was assigned by Julian Eisel 2015-03-22 19:14:17 +01:00

I can sort of confirm that, though I don't see it like a yellow blob like in the screenshot - testfiles are always useful here. Symptom is that the material does not get refreshed. Will check it out.

I can sort of confirm that, though I don't see it like a yellow blob like in the screenshot - testfiles are always useful here. Symptom is that the material does not get refreshed. Will check it out.
Member

Well I also don't get this bright orange color, but I guess this comes from an orange material + deleting any lamps in the scene?

Well I also don't get this bright orange color, but I guess this comes from an orange material + deleting any lamps in the scene?
Author
Member

@Psy-Fi, I just thought it is very intuitive, to repeat it, just:

  1. start blender,
  2. swtich to Texture Mode,
  3. then try changing the Diffuse color of the default cube's material.

The reason I don't upload .blend file this time is that it will refresh when you reload it, which makes it useless (and probably misleading). But sorry if the screenshot is sort of misleading.

@JulianEisel, the orange color is a previous color displayed before refreshing, nothing fancy. :) And yeah, I thnk I temporally used shadeless viewport shading in that screenshot.

@Psy-Fi, I just thought it is very intuitive, to repeat it, just: 1. start blender, 2. swtich to Texture Mode, 3. then try changing the Diffuse color of the default cube's material. The reason I don't upload .blend file this time is that it will refresh when you reload it, which makes it useless (and probably misleading). But sorry if the screenshot is sort of misleading. @JulianEisel, the orange color is a previous color displayed before refreshing, nothing fancy. :) And yeah, I thnk I temporally used shadeless viewport shading in that screenshot.

Need to fix this before release if possible, I'll look at it today

Need to fix this before release if possible, I'll look at it today

Added subscriber: @GabrielSwason

Added subscriber: @GabrielSwason

Are you on GLSL or Multitexture?

Are you on GLSL or Multitexture?

Added subscriber: @zeauro

Added subscriber: @zeauro

Since introduction of Material display for Cycles, all this stuff is very weird.

When we are using GLSL, diffuse color is taken into account by texture display. And it seems that there is no difference between texture display and material display for BI. In both cases, texture colors are mixed with diffuse color.

For Cycles, it is not diffuse color that is taken into account but viewport color until there is a texture node in material.
At this moment, there is no mix. It looks more like texture display for BI when using multitexture or more like Texture Solid.

I suppose that even with GLSL. It should work for BI like for Cycles.
Diffuse Color when no texture. Texture Colors when texture is used in material.

Since introduction of Material display for Cycles, all this stuff is very weird. When we are using GLSL, diffuse color is taken into account by texture display. And it seems that there is no difference between texture display and material display for BI. In both cases, texture colors are mixed with diffuse color. For Cycles, it is not diffuse color that is taken into account but viewport color until there is a texture node in material. At this moment, there is no mix. It looks more like texture display for BI when using multitexture or more like Texture Solid. I suppose that even with GLSL. It should work for BI like for Cycles. Diffuse Color when no texture. Texture Colors when texture is used in material.

That's why new viewport project is worked on, to make those display modes more transparent. But this is not really relevant to this bug (missing updates)

That's why new viewport project is worked on, to make those display modes more transparent. But this is not really relevant to this bug (missing updates)

This issue was referenced by b98c7bcf3a

This issue was referenced by b98c7bcf3a6473491f116aefa1a82f45d28d3451

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b98c7bcf3a.

Closed by commit b98c7bcf3a.

This issue was referenced by 4f57f15648

This issue was referenced by 4f57f156482e937fe922e9e0ec5d1a446b0463da
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44077
No description provided.